# AG

./: README.md  explore_netcdf.py  pass.py  pyproject.toml  queries.md  requirements.txt
argo_data/: D1900022_001.nc  D1900033_001.nc  D1900034_001.nc  D1900035_001.nc  D1900036_001.nc  R13858_001.nc  R15819_001.nc  R15820_001.nc  R15851_001.nc  R15852_001.nc  R15853_001.nc  R15854_001.nc  R15855_001.nc
chroma_db/: chroma.sqlite3
chroma_db/46cd0e43-225f-4d16-a15f-194eb15a19bb/: index_metadata.pickle
config/: config.yaml  logging.conf
data/: argo.db
data/csv/: float_13857.csv  float_13858.csv  float_13859.csv  float_15819.csv  float_15820.csv  float_15851.csv  float_15852.csv  float_15853.csv  float_15854.csv  float_15855.csv  float_1900022.csv  float_1900033.csv  float_1900034.csv  float_1900035.csv  float_1900036.csv
data/processed/: argo_data.parquet  metadata.csv
data/raw/: D20250707_prof_0.nc  D20250708_prof_0.nc
docs/: HLD.md  HLD_MCP.md  LLD.md  LLD_MCP.md  Project_Working_Details.md  System_Architecture_Diagrams.md  api_docs.md  architecture.md  extensibility.md  user_guide.md
frontend/: ENHANCED_FEATURES.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  api.js  (+1 more)
scripts/: __init__.py  build_chroma_from_meta.py  build_from_data_csv.py  ingest_from_metadata_csv.py  meta_nc_to_csv.py  meta_to_chroma.py  nc_to_csv.py  nc_to_sqlite.py  rebuild_argo_sqlite.py  run_ingestion.bat  setup_db.bat  setup_postgres_db.py  start_api.bat  start_frontend.bat
src/: api.py  nearest_floats.py  sqlite_fetch.py
(+31 files in other folders)
